testsuite/positive/std-macros.n
using System.Console;

[Record]
class A
{
  public Prop1  : int    { get; set; }
  public Field1 : int;
  public Prop2  : string { get; set; }
}

[Record]
public class B
{
  public Prop1  : int    { get; set; }
  [RecordIgnore] public Field1 : int;
  [RecordIgnore] public Prop2  : string { get; set; }
}

module Program
{
  Main() : void
  {
    def a = A(1, 2, "a");
    WriteLine($"a.Prop1=$(a.Prop1) a.Field1=$(a.Field1) a.Prop2=$(a.Prop2)");
    def b = B(1);
    WriteLine($"b.Prop1=$(b.Prop1) b.Field1=$(b.Field1) b.Prop2=$(b.Prop2)");
    //_ = ReadLine();
  }
}

/*
BEGIN-OUTPUT
a.Prop1=1 a.Field1=2 a.Prop2=a
b.Prop1=1 b.Field1=0 b.Prop2=
END-OUTPUT
*/ 