testsuite/negative/tuple-indexer.n
class C {
  public static Main () : void
  {
    def x = (1, "foo", 1.3);

    _ = x[-3]; // E: the indexed tuple has only 3 members
    _ = x[3];  // E: the indexed tuple has only 3 members
    _ = x[42]; // E: the indexed tuple has only 3 members

    _ = x[1] + 3; // E: in argument #2.*needed a string, got int
  }
}
